WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132708
deleteAllCompiledCode() shouldn't use the suspension worklist
https://bugs.webkit.org/show_bug.cgi?id=132708
Summary
deleteAllCompiledCode() shouldn't use the suspension worklist
Filip Pizlo
Reported
2014-05-08 14:41:22 PDT
Patch forthcoming.
Attachments
the patch
(3.88 KB, patch)
2014-05-08 14:46 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-05-08 14:46:50 PDT
Created
attachment 231102
[details]
the patch
Mark Hahnenberg
Comment 2
2014-05-08 14:50:32 PDT
Comment on
attachment 231102
[details]
the patch r=me
Filip Pizlo
Comment 3
2014-05-08 14:53:11 PDT
Landed in
http://trac.webkit.org/changeset/168497
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug