deleteAllCompiledCode() shouldn't use the suspension worklist https://bugs.webkit.org/show_bug.cgi?id=132708

Reviewed by Mark Hahnenberg.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::setOptimizationThresholdBasedOnCompilationResult):
* dfg/DFGPlan.cpp:
(JSC::DFG::Plan::isStillValid):
* heap/Heap.cpp:
(JSC::Heap::deleteAllCompiledCode):



Canonical link: https://commits.webkit.org/150754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168497 268f45cc-cd09-0410-ab3c-d52691b4dbfc